// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalError Shallow should render with error 1`] = `
<div
  className=""
>
  <t
    onDismiss={[Function]}
    status="danger"
    title="Sorry, something went wrong."
  >
    Error: Oh no
  </t>
</div>
`;

exports[`GlobalError Shallow should render with no props 1`] = `
<div
  className=""
>
  <t
    onDismiss={[Function]}
    status="danger"
    title="Sorry, something went wrong."
  />
</div>
`;
